<resources>
    <string name="app_name">IvanJurado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="configuracio">Configuració</string>
    <string name="menu_Brands"></string>
    <string name="home">Home</string>
    <string name="galeria">Galeria</string>
    <string name="pdf">PDF</string>
    <string name="menu_Share">Compartir</string>
    <string name="menu_Marca">Marca</string>
    <string name="menu_Send">Enviar</string>
    <string name="shopping">Shopping</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="nombre">Iván Jurado Márquez</string>
    <string name="correo_elec">ivanjuradom@gmail.com</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="settings">Settings</string>
    <string name="community">Comunnity</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>